--- a/index.html
+++ b/index.html
@@ -119,6 +119,39 @@
               <label>Tamaño base (px) <input id="baseFontSize" data-quick="baseFontSize" type="number" min="12" max="28" step="1" /></label>
               <label>Interlineado <input id="lineHeight" data-quick="lineHeight" type="number" min="1" max="2.2" step="0.05" /></label>
             </div>
+            <div class="inline-three">
+              <label>Tamaño título página (rem) <input id="pageTitleSize" data-quick="pageTitleSize" type="number" min="1.1" max="3.2" step="0.05" /></label>
+              <label>Peso título página
+                <select id="pageTitleWeight" data-quick="pageTitleWeight">
+                  <option value="600">600</option>
+                  <option value="700">700</option>
+                  <option value="800">800</option>
+                  <option value="900">900</option>
+                </select>
+              </label>
+              <label>Espaciado letras título (px) <input id="pageTitleLetterSpacing" data-quick="pageTitleLetterSpacing" type="number" min="0" max="6" step="0.1" /></label>
+            </div>
+            <div class="inline-three">
+              <label>Margen inferior título (rem) <input id="pageTitleMarginBottom" data-quick="pageTitleMarginBottom" type="number" min="0" max="2.5" step="0.05" /></label>
+              <label>Tamaño título de curso (rem) <input id="packageTitleSize" data-quick="packageTitleSize" type="number" min="1" max="2.6" step="0.05" /></label>
+              <label>Peso título de curso
+                <select id="packageTitleWeight" data-quick="packageTitleWeight">
+                  <option value="400">400</option>
+                  <option value="500">500</option>
+                  <option value="600">600</option>
+                  <option value="700">700</option>
+                </select>
+              </label>
+            </div>
+            <div class="inline-three">
+              <label>Color título de curso <input id="packageTitleColor" data-quick="packageTitleColor" type="color" /></label>
+              <label>Tamaño título iDevice (rem) <input id="boxTitleSize" data-quick="boxTitleSize" type="number" min="1" max="2.4" step="0.05" /></label>
+              <label>Separación icono/título (px) <input id="boxTitleGap" data-quick="boxTitleGap" type="number" min="0" max="28" step="1" /></label>
+            </div>
+            <label class="checkbox-row">
+              <input id="pageTitleUppercase" data-quick="pageTitleUppercase" type="checkbox" />
+              Título de página en mayúsculas
+            </label>
           </div>
         </details>
 
@@ -220,7 +253,7 @@
     </main>
   </div>
   <footer class="app-footer">
-    <p>v 0.0.2 · (c) <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · Licencia AGPLv3</p>
+    <p>v 0.0.3 · (c) <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · Licencia AGPLv3</p>
   </footer>
 
   <script src="vendor/jszip.min.js"></script>
