feat: mover previsualizacion a runtime dedicado

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           </div>
         </div>
       </header>
-      <iframe id="previewFrame" title="Previsualización eXe" sandbox="allow-same-origin"></iframe>
+      <iframe id="previewFrame" title="Previsualización eXe" src="app/preview.html" sandbox="allow-same-origin allow-scripts"></iframe>
     </main>
   </div>
   <footer class="app-footer">
